--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   mysqldb:
@@ -18,4 +18,4 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - mysqldb
+      - mysql-db
